--- a/services.html
+++ b/services.html
@@ -2,9 +2,13 @@
 <html lang="zxx">
 
 <head>
-    <!-- Required meta tags -->
+    <!-- Required meta tags --><!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- SEO Description Tag-->
+    <meta name="description" content="Reach out to us for expert IT services. With our various Product and Services, you can simply get us to involve in you business with a simple form fillout. We're here to assist you and explore business and creative opportunities."/>
+    <meta name="keywords" content="LemmaIoT Cloud Solutions, IT services, website development, project design, software solutions, technology, business solutions, digital business, profile website, business design, graphic designs"/>
+
     <title>LemmaIoT Service</title>
     <link rel="icon" href="img/fav.png">
     <!-- Bootstrap CSS -->
@@ -35,19 +39,20 @@
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html"> <img src="img/logo-icon.png" alt="logo">
                         </a>
+
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"></span>
                         </button>
 
-                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent" aria-haspopup="true" aria-expanded="false">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Features</a>
+                                    <a class="nav-link" href="tools.html">DIY Tools</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown"
@@ -56,22 +61,21 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="branding.html"> Branding & Design</a>
-                                        <a class="dropdown-item" href="http://getmycf-cv.bubbleapps.io">Online CV Generator</a>
-                                        <a class="dropdown-item" href="#">Document Automation</a>
-                                        <a class="dropdown-item" href="#">Application Development</a>
                                         <a class="dropdown-item" href="profile_website.html">Profile Website</a>
+                                        <a class="dropdown-item" href="#">Desktop Publishing</a>
+                                        <a class="dropdown-item" href="#">Software Solution</a>
                                         <a class="dropdown-item" href="spreadsheet.html">Spreadsheet Solution</a>
+                                        <a class="dropdown-item" href="#">Website Solution</a>
                                     </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pricing.html">Pricing</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
-                        <a href="get_started.html" class="d-none d-sm-block btn_1 home_page_btn">Get Started</a>
+
+                        <a href="lemmaiot.glide.page" class="d-none d-sm-block btn_1 home_page_btn">Client Portal</a>
+
                     </nav>
                 </div>
             </div>
@@ -124,6 +128,44 @@
                             <img src="img/icon/feature_icon_3.png" alt="">
                             <h4>Responsive Layout</h4>
                             <p>We Create a project/website that works on all type of desvices. It detect visitors desvices screen size and change the layout view of the website as per visitor device screen.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="img/animate_icon/Ellipse_1.png" alt="" class="feature_icon_1 custom-animation1">
+    </section>
+    <!--::use sasu part end::-->
+
+    
+    <!--::use sasu part end::-->
+    <section class="use_sasu padding_top">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_feature">
+                        <div class="single_feature_part">
+                            <h4>Unique Design</h4>
+                            <p>User friendly design that will make your project/website generate more traffic engagement. Our highly professional team take care every part of your project design carefully.</p>
+                            <a href="services.html" class="btn_3 genric-btn primary radius"><strong>Browse All Services</strong></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_feature">
+                        <div class="single_feature_part">
+                            <h4>Confidential Design</h4>
+                            <p>There are many templates for any kind of project/websites you might want, but we make your own requirement fulfilled by creating unique sort of things to make your project great.</p>
+                            <a href="services.html" class="btn_3 genric-btn primary radius"><strong>Browse All Services</strong></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_feature">
+                        <div class="single_feature_part">
+                            <h4>Responsive Layout</h4>
+                            <p>We Create a project/website that works on all type of devices. It detect visitors devices screen size and change the layout view of the website as per visitor device screen.</p>
+                            <a href="services.html" class="btn_3 genric-btn primary radius"><strong>Browse All Services</strong></a>
                         </div>
                     </div>
                 </div>
