--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- SEO Description Tag-->
+    <meta name="description" content="Reach out to us for expert IT services. Contact us by phone, email, or through the form below. We're here to assist you and explore business and creative opportunities."/>
+    <meta name="keywords" content="LemmaIoT Cloud Solutions, IT services, website development, project design, software solutions, technology, business solutions"/>
+
     <title>Contact LemmaIoT</title>
     <link rel="icon" href="img/fav.png">
     <!-- Bootstrap CSS -->
@@ -35,43 +39,43 @@
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html"> <img src="img/logo-icon.png" alt="logo">
                         </a>
+
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"></span>
                         </button>
 
-                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent" aria-haspopup="true" aria-expanded="false">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Features</a>
+                                    <a class="nav-link" href="tools.html">DIY Tools</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown"
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Services
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="branding.html"> Branding & Design</a>
-                                        <a class="dropdown-item" href="http://getmycf-cv.bubbleapps.io">Online CV Generator</a>
-                                        <a class="dropdown-item" href="#">Document Automation</a>
-                                        <a class="dropdown-item" href="#">Application Development</a>
                                         <a class="dropdown-item" href="profile_website.html">Profile Website</a>
+                                        <a class="dropdown-item" href="document_embed.html">Document Automation</a>
+                                        <a class="dropdown-item" href="software_embed.html">Software Solution</a>
                                         <a class="dropdown-item" href="spreadsheet.html">Spreadsheet Solution</a>
+                                        <a class="dropdown-item" href="website.html">Website Solution</a>
                                     </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pricing.html">Pricing</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
-                        <a href="get_started.html" class="d-none d-sm-block btn_1">Get Started</a>
+
+                        <a href="https://lemmaiot.glide.page" class="d-none d-sm-block btn_1">Client Portal</a>
+
                     </nav>
                 </div>
             </div>
@@ -143,21 +147,21 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>15 Adebajo Street, Kongi Layout,</h3>
+              <h3><a href="https://g.co/kgs/rL1uqA" style="color: currentColor">15 Adebajo Street, Kongi Layout,</a></h3>
               <p>New Bodija, Ibadan, Nigeria.</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3><a href="tel:2349074683267" style="color: currentColor">+234 907 4683 267</a></h3>
+              <h3><a href="tel:2349121793029" style="color: currentColor">+234 912 179 3029</a></h3>
               <p>Mon to Fri 9am to 6pm</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3><a href="mailto:lemmaiot.pr@gmail.com" style="color: dimgrey">lemmmaiot.pr@gmail.com</a></h3>
+              <h3><a href="mailto:info.lemmaiot@gmail.com" style="color: dimgrey">info.lemmmaiot@gmail.com</a></h3>
               <p>Send us your query anytime!</p>
             </div>
           </div>
@@ -167,82 +171,89 @@
   </section>
   <!-- ================ contact section end ================= -->
 
-    <!--::footer_part start::-->
-    <footer class="footer_part">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-4 col-lg-4">
-                    <div class="single_footer_part">
-                        <a href="index.html" class="footer_logo_iner"> <img src="img/logo.png" alt="#"> </a>
-                        <p>Let us develop your project together, be it, your website, work flow, business automation, mobile or desktop applications, spreadsheet and many more, together we can make your dream visible.</p>
-                    </div>
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-2">
-                    <div class="single_footer_part">
-                        <h4>About Us</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="services.html">Product/Service</a></li>
-                            <li><a href="">Who/What We Are</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="">Complain Box</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-2">
-                    <div class="single_footer_part">
-                        <h4>Branding</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="">Branding Asset</a></li>
-                            <li><a href="">Personal Assets</a></li>
-                            <li><a href="">Stationary Brand</a></li>
-                            <li><a href="">Social Profile</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-2">
-                    <div class="single_footer_part">
-                        <h4>Website</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="">Profile</a></li>
-                            <li><a href="">Corporate</a></li>
-                            <li><a href="">Management</a></li>
-                            <li><a href="">Application</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="single_footer_part">
-                        <h4>Hire Expert</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="spreadsheet_embed.html">Hire Excel Expert</a></li>
-                            <li><a href="">Software Palace</a></li>
-                            <li><a href="">Agencies Relation</a></li>
-                            <li><a href="">Manage Reputation</a></li>
-                        </ul>
-                    </div>
+  <!--::footer_part start::-->
+  <footer class="footer_part">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-md-4 col-lg-4">
+                <div class="single_footer_part">
+                    <a href="index.html" class="footer_logo_iner"> <img src="img/logo.png" alt="#"> </a>
+                    <p>Let us develop your project together, be it, your website, work flow, business automation, mobile or desktop applications, spreadsheet and many more, together we can make your dream visible.</p>
                 </div>
             </div>
-            <hr>
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="copyright_text">
-                        <P>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://getmycf.carrd.co" target="_blank">GetMycf</a></P>
-                    </div>
+
+            <div class="col-sm-4 col-md-4 col-lg-2">
+                <div class="single_footer_part">
+                    <h4>About Us</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="services.html">Product/Service</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="https://forms.gle/eMqRd7YTfwBnTSoZ6">Complain Box</a></li>
+                    </ul>
                 </div>
-                <div class="col-lg-4">
-                    <div class="footer_icon social_icon">
-                        <ul class="list-unstyled">
-                            <li><a href="https://facebook.com/Lemmaiot-109697137507070" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://twitter.com/LemmaIoT?s=09" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://wa.me/2347068730484" class="single_social_icon"><i class="fab fa-whatsapp"></i></a></li>
-                            <li><a href="https://t.me/GetMycf" class="single_social_icon"><i class="fab fa-telegram"></i></a></li>
-                        </ul>
-                    </div>
+            </div>
+
+            <div class="col-sm-4 col-md-4 col-lg-2">
+                <div class="single_footer_part">
+                    <h4>Our Tools</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Spreadsheeet Collections</a></li>
+                        <li><a href="https://bizcard.carrd.co/">Digital Business Card</a></li>
+                        <li><a href="#">Recharge Card Solution</a></li>
+                        <li><a href="graceai.glide.page">AI Chat Bot</a></li>
+                    </ul>
+                </div>
+            </div> 
+
+            <div class="col-sm-4 col-md-5 col-lg-2">
+                <div class="single_footer_part">
+                    <h4>Our Website</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="https://lemmaiot.carrd.co">Our Profile</a></li>
+                        <li><a href="https://lemmaiot.com.ng">Corporate</a></li>
+                        <li><a href="https://g.co/kgs/rL1uqA">On Google</a></li>
+                        <li><a href="https://lemmaiot.glide.pages">Client Portal</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-sm-4 col-md-4 col-lg-2">
+                <div class="single_footer_part">
+                    <h4>Engage Us</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="https://airtable.com/shrIjeQhRE5MLMJnw">Desktop Publishing</a></li>
+                        <li><a href="https://airtable.com/shrp0W2ho4oiycnbN">Spreadsheet Solution</a></li>
+                        <li><a href="https://airtable.com/shrvOOksWAwb8pY6W">Software Solution</a></li>
+                        <li><a href="https://airtable.com/shr6tdHGluMhL6TWW">Profile Website</a></li>
+                        <li><a href="https://airtable.com/shrxQ0dlmzLgDBBW2">Document Automation</a></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="copyright_text">
+                    <P>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://lemmaiot.com.ng" target="_blank">LemmaIoT Cloud Solution</a></P>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="footer_icon social_icon">
+                    <ul class="list-unstyled">
+                        <li><a href="https://facebook.com/Lemmaiot-109697137507070" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://twitter.com/LemmaIoT?s=09" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://wa.me/2349121793029" class="single_social_icon"><i class="fab fa-whatsapp"></i></a></li>
+                        <li><a href="https://t.me/lemmaiot" class="single_social_icon"><i class="fab fa-telegram"></i></a></li>
+                        <li><a href="https://www.instagram.com/lemmaiot/feed" class="single_social_icon"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </footer>
-    <!--::footer_part end::-->
+    </div>
+</footer>
+<!--::footer_part end::-->
 
   <!-- jquery plugins here-->
   <script src="js/jquery-1.12.1.min.js"></script>
