--- a/profile_website.html
+++ b/profile_website.html
@@ -28,50 +28,50 @@
 
 <body>
    <!--::header part start::-->
-    <header class="main_menu single_page_menu">
+   <header class="main_menu single_page_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html"> <img src="img/logo-icon.png" alt="logo">
                         </a>
+
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"></span>
                         </button>
 
-                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                            <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent" aria-haspopup="true" aria-expanded="false">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Features</a>
+                                    <a class="nav-link" href="tools.html">DIY Tools</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown"
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Services
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="branding.html"> Branding & Design</a>
-                                        <a class="dropdown-item" href="http://getmycf-cv.bubbleapps.io">Online CV Generator</a>
-                                        <a class="dropdown-item" href="#">Document Automation</a>
-                                        <a class="dropdown-item" href="#">Application Development</a>
                                         <a class="dropdown-item" href="profile_website.html">Profile Website</a>
+                                        <a class="dropdown-item" href="document_embed.html">Document Automation</a>
+                                        <a class="dropdown-item" href="software_embed.html">Software Solution</a>
                                         <a class="dropdown-item" href="spreadsheet.html">Spreadsheet Solution</a>
+                                        <a class="dropdown-item" href="website.html">Website Solution</a>
                                     </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pricing.html">Pricing</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
-                        <a href="get_started.html" class="d-none d-sm-block btn_1">Get Started</a>
+
+                        <a href="https://lemmaiot.glide.page" class="d-none d-sm-block btn_1">Client Portal</a>
+
                     </nav>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
                             <h2>Profile Website Service</h2>
-                            <h5><a href="index.html" style="color: currentColor">home</a> <span></span> <a href="services.html" style="color: currentColor">services</a>  <span></span> <a href="profile_website.html" style="color: currentColor">Profile Website</a></h5>
+                            <h5><a href="index.html" style="color: currentColor">home</a> <span></span> <a href="profile_website.html" style="color: currentColor">Profile Website</a></h5>
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="section_tittle text-center">
                         <h2>Profile Website</h2>
                         <p>Profile Website is a Single-Landed Website to contains pretty anything</p><hr>
-                        <p>Profile website is a platform developed by <a href="https://try.carrd.co/fyrm7p89" target="_blank">Carrd Co</a> to build one-page that is simple, fully responsive, one-page sites for pretty much anything.
+                        <p>Profile website is a platform developed by <a href="https://try.carrd.co/lemmaiot" target="_blank">Carrd Co</a> to build one-page that is simple, fully responsive, one-page sites for pretty much anything.
                         <br><br>
                         Whether it's a personal profile, Company/Business Profile, Product Pranded Website, Project Webpage or just a landing webpage to capture emails, or something a bit more elaborate, this platform has you covered. The website can contains any kind of content such as your portfolio, profile picture, all your social media plaform, you can also include a download link to your CV in the case of personal profile and your personal documents, download link to any project material, products and much more than you can imagin</p>
                     </div>
@@ -161,14 +161,14 @@
                     </div>
                 </div>
                 <div class="">
-                    <a href="profile_website_embed.html" class="genric-btn default circle" target="_blank">GET&nbsp;A&nbsp;PROFILE&nbsp;WEBSITE</a>
+                    <a href="https://getmycf.carrd.co/#pricing" class="genric-btn default circle">GET&nbsp;A&nbsp;PROFILE&nbsp;WEBSITE</a>
                 </div>
             </div>
         </div>
     </section>
 
 
-   <!--::pricing part start::-->
+   <!--::pricing part start::
     <section class="pricing_part section_padding home_page_pricing">
         <div class="container">
             <div class="row justify-content-center">
@@ -185,7 +185,7 @@
                     <div class="single_pricing_part">
                         <img src="img/icon/pricing_icon_1.png" alt="">
                         <p>Just Visibility</p>
-                        <h3>&#8358;6,000</h3>
+                        <h3>&#8358;7,000</h3>
                         <ul>
                             <li><b>Profile Website</b></li>
                             <li>* Responsive Webpage</li>
@@ -240,7 +240,7 @@
         </div>
         <img src="img/animate_icon/Ellipse_2.png" alt="" class="feature_icon_2 custom-animation2">
     </section>
-    <!--::pricing part end::-->
+    ::pricing part end::-->
 
     <!--::footer_part start::-->
     <footer class="footer_part">
@@ -252,56 +252,62 @@
                         <p>Let us develop your project together, be it, your website, work flow, business automation, mobile or desktop applications, spreadsheet and many more, together we can make your dream visible.</p>
                     </div>
                 </div>
+
                 <div class="col-sm-4 col-md-4 col-lg-2">
                     <div class="single_footer_part">
                         <h4>About Us</h4>
                         <ul class="list-unstyled">
                             <li><a href="services.html">Product/Service</a></li>
-                            <li><a href="">Who/What We Are</a></li>
+                            <li><a href="#">About Us</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="">Complain Box</a></li>
+                            <li><a href="https://forms.gle/eMqRd7YTfwBnTSoZ6">Complain Box</a></li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="col-sm-4 col-md-4 col-lg-2">
                     <div class="single_footer_part">
-                        <h4>Branding</h4>
+                        <h4>Our Tools</h4>
                         <ul class="list-unstyled">
-                            <li><a href="">Branding Asset</a></li>
-                            <li><a href="">Personal Assets</a></li>
-                            <li><a href="">Stationary Brand</a></li>
-                            <li><a href="">Social Profile</a></li>
+                            <li><a href="#">Spreadsheeet Collections</a></li>
+                            <li><a href="https://bizcard.carrd.co/">Digital Business Card</a></li>
+                            <li><a href="#">Recharge Card Solution</a></li>
+                            <li><a href="graceai.glide.page">AI Chat Bot</a></li>
+                        </ul>
+                    </div>
+                </div> 
+
+                <div class="col-sm-4 col-md-5 col-lg-2">
+                    <div class="single_footer_part">
+                        <h4>Our Website</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="https://lemmaiot.carrd.co">Our Profile</a></li>
+                            <li><a href="https://lemmaiot.com.ng">Corporate</a></li>
+                            <li><a href="https://g.co/kgs/rL1uqA">On Google</a></li>
+                            <li><a href="https://lemmaiot.glide.pages">Client Portal</a></li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="col-sm-4 col-md-4 col-lg-2">
                     <div class="single_footer_part">
-                        <h4>Website</h4>
+                        <h4>Engage Us</h4>
                         <ul class="list-unstyled">
-                            <li><a href="">Profile</a></li>
-                            <li><a href="">Corporate</a></li>
-                            <li><a href="">Management</a></li>
-                            <li><a href="">Application</a></li>
+                            <li><a href="https://airtable.com/shrIjeQhRE5MLMJnw">Desktop Publishing</a></li>
+                            <li><a href="https://airtable.com/shrp0W2ho4oiycnbN">Spreadsheet Solution</a></li>
+                            <li><a href="https://airtable.com/shrvOOksWAwb8pY6W">Software Solution</a></li>
+                            <li><a href="https://getmycf.carrd.co">Profile Website</a></li>
+                            <li><a href="https://airtable.com/shrxQ0dlmzLgDBBW2">Document Automation</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3 col-lg-2">
-                    <div class="single_footer_part">
-                        <h4>Hire Expert</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="spreadsheet_embed.html">Hire Excel Expert</a></li>
-                            <li><a href="">Software Palace</a></li>
-                            <li><a href="">Agencies Relation</a></li>
-                            <li><a href="">Manage Reputation</a></li>
-                        </ul>
-                    </div>
-                </div>
+
             </div>
             <hr>
             <div class="row">
                 <div class="col-lg-8">
                     <div class="copyright_text">
-                        <P>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://getmycf.carrd.co" target="_blank">GetMycf</a></P>
+                        <P>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://lemmaiot.com.ng" target="_blank">LemmaIoT Cloud Solution</a></P>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -309,8 +315,9 @@
                         <ul class="list-unstyled">
                             <li><a href="https://facebook.com/Lemmaiot-109697137507070" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://twitter.com/LemmaIoT?s=09" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://wa.me/2347068730484" class="single_social_icon"><i class="fab fa-whatsapp"></i></a></li>
-                            <li><a href="https://t.me/GetMycf" class="single_social_icon"><i class="fab fa-telegram"></i></a></li>
+                            <li><a href="https://wa.me/2349121793029" class="single_social_icon"><i class="fab fa-whatsapp"></i></a></li>
+                            <li><a href="https://t.me/lemmaiot" class="single_social_icon"><i class="fab fa-telegram"></i></a></li>
+                            <li><a href="https://www.instagram.com/lemmaiot/feed" class="single_social_icon"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
