--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="zxx">
-
+<script
+src='//fw-cdn.com/10904650/3667531.js'
+chat='true'>
+</script>
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
