--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!doctype html>
 <html lang="zxx">
+<script>
+window.embeddedChatbotConfig = {
+chatbotId: "DBOQ7GxNlNaKjL75_X-l9",
+domain: "www.chatbase.co"
+}
+</script>
 <script
-src='//fw-cdn.com/10904650/3667531.js'
-chat='true'>
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="DBOQ7GxNlNaKjL75_X-l9"
+domain="www.chatbase.co"
+defer>
 </script>
 <head>
     <!-- Required meta tags -->
