--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <!doctype html>
 <html lang="zxx">
 <script>
-window.embeddedChatbotConfig = {
-chatbotId: "DBOQ7GxNlNaKjL75_X-l9",
-domain: "www.chatbase.co"
-}
-</script>
-<script
-src="https://www.chatbase.co/embed.min.js"
-chatbotId="DBOQ7GxNlNaKjL75_X-l9"
-domain="www.chatbase.co"
-defer>
-</script>
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -394,6 +384,7 @@ defer>
                 </div>
             </div>
         </div>
+        <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>65178f59af93b05b27f9d2ff,651786e6e12461609bde8d8f</script>
     </footer>
     <!--::footer_part end::-->
 
