--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- chatbot tag -->
+    <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>65178f59af93b05b27f9d2ff,651786e6e12461609bde8d8f</script>
 </head>
 
 <body>
@@ -384,8 +387,8 @@
                 </div>
             </div>
         </div>
-        <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>65178f59af93b05b27f9d2ff,651786e6e12461609bde8d8f</script>
-    </footer>
+        
+     </footer>
     <!--::footer_part end::-->
 
     <!-- jquery plugins here-->
