--- a/chatbot_embed.html
+++ b/chatbot_embed.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Get Branding</title>
+    <title>Get Chatbot</title>
     <link rel="icon" href="img/fav.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -56,7 +56,7 @@
                                         Services
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="branding.html">Publishing & Designs</a>
+                                        <a class="dropdown-item" href="branding.html">Digital Designs</a>
                                         <a class="dropdown-item" href="profile_website.html">Profile Website</a>
                                         <a class="dropdown-item" href="automation.html">Document Automation</a>
                                         <a class="dropdown-item" href="software.html">Software Solution</a>
@@ -86,10 +86,9 @@
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
-                            <h2>Describe Your Task</h2>
+                            <h2>Smart AI Chatbot</h2>
                             <h5><a href="index.html" style="color: currentColor">home</a> <span></span> 
-                                <a href="branding.html" style="color: currentColor">branding</a> <span></span> 
-                                <a href="branding_embed.html" style="color: currentColor">Get Designs</a></h5>
+                                <a href="chatbot_embed.html" style="color: currentColor">Chatbot Agent</a></h5>
                         </div>
                     </div>
                 </div>
@@ -98,29 +97,39 @@
     </section>
     <!-- breadcrumb start-->
 
-  <!--::Gallery view of all prodcut in Airtable::-->
-    <section class="subscribe_part section_padding">
+      <!--::Gallery view of all prodcut in Airtable::-->
+      <section class="subscribe_part section_padding">
         <div class="container">
             <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="subscribe_part_text text-center">
+                            <h2>Boost Customer Engagement with a Chat Bot</h2>
+                            <h4>Try out Our Smart AI Chatbot that is a trains ChatGPT on our data and lets us add a chat widget to our website, give it a trial and see what you could also get.</h4>
+                        </div>
+                    </div>
                 <div class="col-12">
-                    <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script>
-                    <iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrIjeQhRE5MLMJnw?backgroundColor=blue" frameborder="0" onmousewheel="" width="100%" height="1435.2" style="background: transparent; border: 1px solid #ccc;"></iframe>
+                    <iframe
+                    src="https://www.chatbase.co/chatbot-iframe/DBOQ7GxNlNaKjL75_X-l9"
+                    width="100%"
+                    style="height: 100%; min-height: 700px"
+                    frameborder="0"
+                    ></iframe>
                 </div>
             </div>
         </div>
         <img src="img/animate_icon/Ellipse_5.png" alt="" class="feature_icon_2 custom-animation2">
     </section>
-    <!--::Gallery view of all prodcut in Airtable::-->
+    <!--::Gallery view of all prodcut in Airtable::-->  
+
     
      <!--::Browse All Categories of Our Service::-->
-    <section class="subscribe_part padding_bottom">
+     <section class="subscribe_part padding_bottom">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="subscribe_part_text text-center">
-                        <h4>There are lot more you can do with/through us, you can get started by yourself by using our recommended tools or get engage with us as our client and explore a lot of opportunity to ease your business operations.</h4>
-                        <a href="tools.html" class="btn_3 genric-btn primary radius"><strong>Do It Yourself</strong></a>
-                        <a href="https://lemmaiot.glide.page" class="btn_3 genric-btn info radius"><strong>Our Client Portal</strong></a>
+                        <h4>Implement a chatbot on your website to provide instant responses to customer queries and engage with visitors in real-time. Chatbots can help with basic customer support, provide product recommendations, and assist with navigating your website.</h4>
+                        <a href="https://airtable.com/appSsUylm9F7h35Pu/shrUPkfhp35Oogdvd" class="btn_3 genric-btn primary radius"><strong>Get Your Chatbot Now</strong></a>
                     </div>
                 </div>
             </div>
@@ -128,6 +137,7 @@
         <img src="img/animate_icon/Ellipse_5.png" alt="" class="feature_icon_2 custom-animation2">
     </section>
     <!--::Browse all categories of our service part end::-->
+
     
     <!--::footer_part start::-->
     <footer class="footer_part">
