--- a/profile_website.html
+++ b/profile_website.html
@@ -56,10 +56,10 @@
                                         Services
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="branding.html"> Branding & Design</a>
+                                        <a class="dropdown-item" href="branding.html">Publishing & Design</a>
                                         <a class="dropdown-item" href="profile_website.html">Profile Website</a>
-                                        <a class="dropdown-item" href="document_embed.html">Document Automation</a>
-                                        <a class="dropdown-item" href="software_embed.html">Software Solution</a>
+                                        <a class="dropdown-item" href="automation.html">Document Automation</a>
+                                        <a class="dropdown-item" href="software.html">Software Solution</a>
                                         <a class="dropdown-item" href="spreadsheet.html">Spreadsheet Solution</a>
                                         <a class="dropdown-item" href="website.html">Website Solution</a>
                                     </div>
@@ -87,18 +87,19 @@
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
                             <h2>Profile Website Service</h2>
-                            <h5><a href="index.html" style="color: currentColor">home</a> <span></span> <a href="profile_website.html" style="color: currentColor">Profile Website</a></h5>
+                            <h5><a href="index.html" style="color: currentColor">home</a> <span></span> 
+                                <a href="profile_website.html" style="color: currentColor">Profile Website</a></h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- breadcrumb start-->
+    <!-- breadcrumb end-->
 
 
 
-    <!--::use sasu part end::-->
+    <!--::use sasu part start::-->
     <section class="use_sasu padding_top">
         <div class="container">
             <div class="row justify-content-center">
@@ -153,94 +154,20 @@
     <img src="img/animate_icon/Ellipse_1.png" alt="" class="feature_icon_1 custom-animation1">
     <section class="footer_button_part">
         <div class="container">
-            <div class="row align-items-top">
+            <div class="row align-items-center">
                 <div class="col-md-8">
                     <div class="single_feature_part">
                         <h2 style="color:white">Sound good?</h2>
-                        <p style="color:white">ALL THESE FEATURES FOR JUST &#8358;350/MONTH<br>Click here to get started. No signup required.</p>
+                        <p style="color:white">Let's crafts a stunning one-page websites for you with simplicity and perfect design.<br>YOU CAN GET STARTED WITH JUST &#8358;2,500<span> Only</span></p>
                     </div>
                 </div>
-                <div class="">
-                    <a href="https://getmycf.carrd.co/#pricing" class="genric-btn default circle">GET&nbsp;A&nbsp;PROFILE&nbsp;WEBSITE</a>
+                <div class="row align-items-center right">
+                    <a href="https://getmycf.carrd.co/#pricing" class="genric-btn default circle">LET'S&nbsp;GET&nbsp;STARTED</a>
                 </div>
             </div>
         </div>
     </section>
 
-
-   <!--::pricing part start::
-    <section class="pricing_part section_padding home_page_pricing">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="section_tittle text-center">
-                        <h2>Our Simple Package</h2>
-                        <p>Our Simple package that will help you to get started and with your business.</p>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_pricing_part">
-                        <img src="img/icon/pricing_icon_1.png" alt="">
-                        <p>Just Visibility</p>
-                        <h3>&#8358;7,000</h3>
-                        <ul>
-                            <li><b>Profile Website</b></li>
-                            <li>* Responsive Webpage</li>
-                            <li>* Can contain Anything</li>
-                            <li>* Unlimited View</li>
-                            <li>* Free Hosting</li><hr>
-                            <li>* Branded Domain</li>
-                            <li>* Update Charge</li>
-                            <li>* 24/7 Support</li>
-                        </ul>
-                        <a href="#" class="pricing_btn">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_pricing_part">
-                        <img src="img/icon/pricing_icon_2.png" alt="">
-                        <p>Business Startup</p>
-                        <h3>&#8358;15,000</h3>
-                        <ul>
-                            <li><b>All of Visibility +</b></li>
-                            <li>* Business Logo</li>
-                            <li>* 2 Social Media Brand</li>
-                            <li>* 1 Stationary Design</li>
-                            <li>* Gallery Webpage</li><hr>
-                            <li>* Custom Domain</li>
-                            <li>* Update Charge</li>
-                            <li>* 24/7 Support</li>
-                        </ul>
-                        <a href="#" class="pricing_btn">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_pricing_part">
-                        <img src="img/icon/pricing_icon_3.png" alt="">
-                        <p>Business Premium</p>
-                        <h3>&#8358;45,000</h3>
-                        <ul>
-                            <li><b>All of Business Startup +</b></li>
-                            <li>* Complete Business Brand</li>
-                            <li>* 3 Stationary Design</li>
-                            <li>* Any Social Media Brand</li>
-                            <li>* Realtime Website Update</li><hr>
-                            <li>* Custom Domain</li>
-                            <li>* After Sale Service</li>
-                            <li>* 24/7 Support</li>
-                        </ul>
-                        <a href="#" class="pricing_btn">Learn More</a>
-                    </div>
-                </div>
-               
-            </div>
-        </div>
-        <img src="img/animate_icon/Ellipse_2.png" alt="" class="feature_icon_2 custom-animation2">
-    </section>
-    ::pricing part end::-->
 
     <!--::footer_part start::-->
     <footer class="footer_part">
@@ -255,12 +182,13 @@
 
                 <div class="col-sm-4 col-md-4 col-lg-2">
                     <div class="single_footer_part">
-                        <h4>About Us</h4>
+                        <h4>Our Pages</h4>
                         <ul class="list-unstyled">
-                            <li><a href="services.html">Product/Service</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="https://forms.gle/eMqRd7YTfwBnTSoZ6">Complain Box</a></li>
+                            <li><a href="https://facebook.com/Lemmaiot-109697137507070">Facebook</a></li>
+                            <li><a href="https://twitter.com/LemmaIoT">Twitter</a></li>
+                            <li><a href="https://www.instagram.com/lemmaiot/feed">Instagram</a></li>
+                            <li><a href="https://linkedin.com/company/lemmaiot">Linkedin</a></li>
+                            <li><a href="https://t.me/lemmaiot">Telegram</a></li>
                         </ul>
                     </div>
                 </div>
@@ -269,10 +197,11 @@
                     <div class="single_footer_part">
                         <h4>Our Tools</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#">Spreadsheeet Collections</a></li>
-                            <li><a href="https://bizcard.carrd.co/">Digital Business Card</a></li>
-                            <li><a href="#">Recharge Card Solution</a></li>
-                            <li><a href="graceai.glide.page">AI Chat Bot</a></li>
+                            <li><a href="#">Ease Accounting</a></li>
+                            <li><a href="#">Digital Business</a></li>
+                            <li><a href="#">Recharge Card</a></li>
+                            <li><a href="https://graceai.glide.page">GraceAI Tools</a></li>
+                            <li><a href="https://forms.gle/eMqRd7YTfwBnTSoZ6">Complain Box</a></li>
                         </ul>
                     </div>
                 </div> 
@@ -281,10 +210,11 @@
                     <div class="single_footer_part">
                         <h4>Our Website</h4>
                         <ul class="list-unstyled">
-                            <li><a href="https://lemmaiot.carrd.co">Our Profile</a></li>
-                            <li><a href="https://lemmaiot.com.ng">Corporate</a></li>
+                            <li><a href="https://linktr.ee/lemmaiot">Our Profile</a></li>
+                            <li><a href="https://selar.co/m/lemmaiot">Our eLibrary</a></li>
                             <li><a href="https://g.co/kgs/rL1uqA">On Google</a></li>
                             <li><a href="https://lemmaiot.glide.pages">Client Portal</a></li>
+                            <li><a href="https://ko-fi.com/lemmaiot">Support Us</a></li>
                         </ul>
                     </div>
                 </div>
@@ -294,10 +224,10 @@
                         <h4>Engage Us</h4>
                         <ul class="list-unstyled">
                             <li><a href="https://airtable.com/shrIjeQhRE5MLMJnw">Desktop Publishing</a></li>
-                            <li><a href="https://airtable.com/shrp0W2ho4oiycnbN">Spreadsheet Solution</a></li>
+                            <li><a href="https://airtable.com/shrp0W2ho4oiycnbN">Spreadsheet Service</a></li>
                             <li><a href="https://airtable.com/shrvOOksWAwb8pY6W">Software Solution</a></li>
                             <li><a href="https://getmycf.carrd.co">Profile Website</a></li>
-                            <li><a href="https://airtable.com/shrxQ0dlmzLgDBBW2">Document Automation</a></li>
+                            <li><a href="https://airtable.com/shrxQ0dlmzLgDBBW2">File Automation</a></li>
                         </ul>
                     </div>
                 </div>
