--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,10 @@
                                         Services
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="branding.html"> Branding & Design</a>
+                                        <a class="dropdown-item" href="branding.html">Publishing & Design</a>
                                         <a class="dropdown-item" href="profile_website.html">Profile Website</a>
-                                        <a class="dropdown-item" href="document_embed.html">Document Automation</a>
-                                        <a class="dropdown-item" href="software_embed.html">Software Solution</a>
+                                        <a class="dropdown-item" href="automation.html">Document Automation</a>
+                                        <a class="dropdown-item" href="software.html">Software Solution</a>
                                         <a class="dropdown-item" href="spreadsheet.html">Spreadsheet Solution</a>
                                         <a class="dropdown-item" href="website.html">Website Solution</a>
                                     </div>
@@ -91,7 +91,8 @@
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
                             <h2>contact us</h2>
-                            <h5><a href="index.html" style="color: currentColor">home</a> <span></span> <a href="contact.html" style="color: currentColor">Contact</a></h5>
+                            <h5><a href="index.html" style="color: currentColor">home</a> <span></span>
+                                <a href="contact.html" style="color: currentColor">Contact</a></h5>
                         </div>
                     </div>
                 </div>
@@ -107,8 +108,9 @@
         <div class="col-12">
           <h2 class="contact-title">Get in Touch</h2>
         </div>
+        <!-- =========== Form Bar Start Here ============= -->
         <div class="col-lg-8">
-          <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm"
+          <form class="form-contact contact_form" action="" method="post" name="https://script.google.com/macros/s/AKfycbzWd02-4gUA13bkKRTkP9tY8dkZ7a-0dM1jiXHCEnX2xH-LUHBWwvfHa4c7BsbTTkEk/exec" id="contactForm"
             novalidate="novalidate">
             <div class="row">
               <div class="col-12">
@@ -116,25 +118,25 @@
 
                   <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
                     onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'"
-                    placeholder='Enter Message'></textarea>
+                    placeholder='Enter Message'></textarea> <!-- Sheet Header "message"-->
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
                   <input class="form-control" name="name" id="name" type="text" onfocus="this.placeholder = ''"
-                    onblur="this.placeholder = 'Enter your name'" placeholder='Enter your name'>
+                    onblur="this.placeholder = 'Enter your name'" placeholder='Enter your name'> <!-- Sheet Header "name"-->
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
                   <input class="form-control" name="email" id="email" type="email" onfocus="this.placeholder = ''"
-                    onblur="this.placeholder = 'Enter email address'" placeholder='Enter email address'>
+                    onblur="this.placeholder = 'Enter email address'" placeholder='Enter email address'> <!-- Sheet Header "email"-->
                 </div>
               </div>
               <div class="col-12">
                 <div class="form-group">
                   <input class="form-control" name="subject" id="subject" type="text" onfocus="this.placeholder = ''"
-                    onblur="this.placeholder = 'Enter Subject'" placeholder='Enter Subject'>
+                    onblur="this.placeholder = 'Enter Subject'" placeholder='Enter Subject'> <!-- Sheet Header "subject"-->
                 </div>
               </div>
             </div>
@@ -143,6 +145,9 @@
             </div>
           </form>
         </div>
+        <!-- =========== Form Bar End Here ============= -->
+
+       <!-- =========== Conatact List Start Here =========== -->
         <div class="col-lg-4">
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
@@ -166,6 +171,7 @@
             </div>
           </div>
         </div>
+        <!-- =========== Conatct List End Here ============= -->
       </div>
     </div>
   </section>
@@ -184,12 +190,13 @@
 
             <div class="col-sm-4 col-md-4 col-lg-2">
                 <div class="single_footer_part">
-                    <h4>About Us</h4>
+                    <h4>Our Pages</h4>
                     <ul class="list-unstyled">
-                        <li><a href="services.html">Product/Service</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="https://forms.gle/eMqRd7YTfwBnTSoZ6">Complain Box</a></li>
+                        <li><a href="https://facebook.com/Lemmaiot-109697137507070">Facebook</a></li>
+                        <li><a href="https://twitter.com/LemmaIoT">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/lemmaiot/feed">Instagram</a></li>
+                        <li><a href="https://linkedin.com/company/lemmaiot">Linkedin</a></li>
+                        <li><a href="https://t.me/lemmaiot">Telegram</a></li>
                     </ul>
                 </div>
             </div>
@@ -198,10 +205,11 @@
                 <div class="single_footer_part">
                     <h4>Our Tools</h4>
                     <ul class="list-unstyled">
-                        <li><a href="#">Spreadsheeet Collections</a></li>
-                        <li><a href="https://bizcard.carrd.co/">Digital Business Card</a></li>
-                        <li><a href="#">Recharge Card Solution</a></li>
-                        <li><a href="graceai.glide.page">AI Chat Bot</a></li>
+                        <li><a href="#">Ease Accounting</a></li>
+                        <li><a href="#">Digital Business</a></li>
+                        <li><a href="#">Recharge Card</a></li>
+                        <li><a href="https://graceai.glide.page">GraceAI Tools</a></li>
+                        <li><a href="https://forms.gle/eMqRd7YTfwBnTSoZ6">Complain Box</a></li>
                     </ul>
                 </div>
             </div> 
@@ -210,10 +218,11 @@
                 <div class="single_footer_part">
                     <h4>Our Website</h4>
                     <ul class="list-unstyled">
-                        <li><a href="https://lemmaiot.carrd.co">Our Profile</a></li>
-                        <li><a href="https://lemmaiot.com.ng">Corporate</a></li>
+                        <li><a href="https://linktr.ee/lemmaiot">Our Profile</a></li>
+                        <li><a href="https://selar.co/m/lemmaiot">Our eLibrary</a></li>
                         <li><a href="https://g.co/kgs/rL1uqA">On Google</a></li>
                         <li><a href="https://lemmaiot.glide.pages">Client Portal</a></li>
+                        <li><a href="https://ko-fi.com/lemmaiot">Support Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -223,10 +232,10 @@
                     <h4>Engage Us</h4>
                     <ul class="list-unstyled">
                         <li><a href="https://airtable.com/shrIjeQhRE5MLMJnw">Desktop Publishing</a></li>
-                        <li><a href="https://airtable.com/shrp0W2ho4oiycnbN">Spreadsheet Solution</a></li>
+                        <li><a href="https://airtable.com/shrp0W2ho4oiycnbN">Spreadsheet Service</a></li>
                         <li><a href="https://airtable.com/shrvOOksWAwb8pY6W">Software Solution</a></li>
-                        <li><a href="https://airtable.com/shr6tdHGluMhL6TWW">Profile Website</a></li>
-                        <li><a href="https://airtable.com/shrxQ0dlmzLgDBBW2">Document Automation</a></li>
+                        <li><a href="https://getmycf.carrd.co">Profile Website</a></li>
+                        <li><a href="https://airtable.com/shrxQ0dlmzLgDBBW2">File Automation</a></li>
                     </ul>
                 </div>
             </div>
@@ -254,6 +263,46 @@
     </div>
 </footer>
 <!--::footer_part end::-->
+
+  
+  <!-- =========== Submit to Google Shaet App Script Start Here =========== -->
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzWd02-4gUA13bkKRTkP9tY8dkZ7a-0dM1jiXHCEnX2xH-LUHBWwvfHa4c7BsbTTkEk/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const loading = document.querySelector('.js-loading')
+    const successMessage = document.querySelector('.js-success-message')
+    const errorMessage = document.querySelector('.js-error-message')
+
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      showLoadingIndicator()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => showSuccessMessage(response))
+        .catch(error => showErrorMessage(error))
+    })
+
+    function showLoadingIndicator () {
+      form.classList.add('is-hidden')
+      loading.classList.remove('is-hidden')
+    }
+
+    function showSuccessMessage (response) {
+      console.log('Success!', response)
+      setTimeout(() => {
+        successMessage.classList.remove('is-hidden')
+        loading.classList.add('is-hidden')
+      }, 500)
+    }
+
+    function showErrorMessage (error) {
+      console.error('Error!', error.message)
+      setTimeout(() => {
+        errorMessage.classList.remove('is-hidden')
+        loading.classList.add('is-hidden')
+      }, 500)
+    }
+  </script>
+  <!-- =========== Submit to Google Shaet App Script End Here =========== -->
 
   <!-- jquery plugins here-->
   <script src="js/jquery-1.12.1.min.js"></script>
