--- a/tools.html
+++ b/tools.html
@@ -157,13 +157,13 @@
                                 <div class="serial"></div> 
                                 <div class="country"> <img src="img/brands/brand7.png" alt="flag"></div>
                                 <div class="visit">WordPress offers flexible website development, empowering us to create customized web solutions efficiently.</div>
-                                <div class="percentage"><a href="#" style="color: #f50c6a">carrd.co</a></div>
+                                <div class="percentage"><a href="https://wordpress.com" style="color: #f50c6a">wordpress.com</a></div>
                             </div>
                             <div class="table-row">
                                 <div class="serial"></div> 
                                 <div class="country"> <img src="img/brands/brand8.png" alt="flag"></div>
                                 <div class="visit">Jotform simplifies data collection with customizable forms, a perfect fit for gathering valuable insights.</div>
-                                <div class="percentage"><a href="#" style="color: #f50c6a">wordpress.com</a></div>
+                                <div class="percentage"><a href="#" style="color: #f50c6a">jotform.com</a></div>
                             </div>
                             <!-- <div class="table-row">
                                 <div class="serial"></div> 
@@ -223,13 +223,13 @@
                                 <div class="serial"></div> 
                                 <div class="country"> <img src="img/brands/brand18.png" alt="flag"></div>
                                 <div class="visit">Paystack's secure payment processing solutions are seamlessly integrated into our e-commerce projects.</div>
-                                <div class="percentage"><a href="#" style="color: #f50c6a">carrd.co</a></div>
+                                <div class="percentage"><a href="https://dashboard.paystack.com" style="color: #f50c6a">paystack.com</a></div>
                             </div>
                             <div class="table-row">
                                 <div class="serial"></div> 
                                 <div class="country"> <img src="img/brands/brand19.png" alt="flag"></div>
                                 <div class="visit">OpenAI's cutting-edge AI models enhance our solutions with natural language understanding and generation.</div>
-                                <div class="percentage"><a href="https://dashboard.paystack.com" style="color: #f50c6a">paystack</a></div>
+                                <div class="percentage"><a href="https://chat.openai.com" style="color: #f50c6a">openai.com</a></div>
                             </div>
                             <div class="table-row">
                                 <div class="serial"></div> 
