--- a/branding.html
+++ b/branding.html
@@ -268,7 +268,7 @@
                     <div class="single_footer_part">
                         <h4>Our Tools</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#">Ease Accounting</a></li>
+                            <li><a href="https://unacct.glideapp.io">Ease Accounting</a></li>
                             <li><a href="#">Digital Business</a></li>
                             <li><a href="#">Recharge Card</a></li>
                             <li><a href="https://graceai.glide.page">GraceAI Tools</a></li>
