--- a/branding_embed.html
+++ b/branding_embed.html
@@ -121,6 +121,7 @@
                         <h4>There are lot more you can do with/through us, you can get started by yourself by using our recommended tools or get engage with us as our client and explore a lot of opportunity to ease your business operations.</h4>
                         <a href="tools.html" class="btn_3 genric-btn primary radius"><strong>Do It Yourself</strong></a>
                         <a href="https://lemmaiot.glide.page" class="btn_3 genric-btn info radius"><strong>Our Client Portal</strong></a>
+                        <a href="https://paystack.com/pay/lemmaiot" class="btn_3 genric-btn success radius"><strong>Make a Payment</strong></a>
                     </div>
                 </div>
             </div>
