--- a/chatbot_embed.html
+++ b/chatbot_embed.html
@@ -104,7 +104,7 @@
                     <div class="col-lg-8">
                         <div class="subscribe_part_text text-center">
                             <h2>Boost Customer Engagement with a Chat Bot</h2>
-                            <h4>Try out Our Smart AI Chatbot that is a trains ChatGPT on our data and lets us add a chat widget to our website, give it a trial and see what you could also get.</h4>
+                            <h4>Try out Our Smart AI Chatbot that is a trains ChatGPT on your data and lets us add a chat widget to your website, give it a trial and see what you could also get.</h4>
                         </div>
                     </div>
                 <div class="col-12">
@@ -133,6 +133,7 @@ frameborder="0"
                     <div class="subscribe_part_text text-center">
                         <h4>Implement a chatbot on your website to provide instant responses to customer queries and engage with visitors in real-time. Chatbots can help with basic customer support, provide product recommendations, and assist with navigating your website.</h4>
                         <a href="https://airtable.com/appSsUylm9F7h35Pu/shrUPkfhp35Oogdvd" class="btn_3 genric-btn primary radius"><strong>Get Your Chatbot Now</strong></a>
+                        <a href="https://paystack.com/pay/lemmaiot" class="btn_3 genric-btn success radius"><strong>Make a Payment</strong></a>
                     </div>
                 </div>
             </div>
