--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                         <p>Unlock the power of smart technology for your business with LemmaIoT Cloud Solutions.<br><br>
                             Discover our comprehensive IT solutions. From software development to project design and website solutions, with how we use no-code tools to simplify your tech needs. Let's collaborate on your success.</p>
                             <a href="https://calendly.com/lemmaiot/consultants" class="btn_3 genric-btn primary circle"><strong>Book a Consultation</strong></a> <b>&nbsp;</b></b>
-                            <a href="hire_service_embed.html" class="genric-btn info circle">Request a Service</a> <b>&nbsp;</b>
+                            <a href="hire_service_embed.html" class="genric-btn info circle"><strong>Request a Service</strong></a> <b>&nbsp;</b>  
+				            <a href="https://paystack.com/pay/lemmaiot" class="genric-btn success circle"><strong>Make a Payment</strong></a>
                         </div>
                     </div>
                 </div>
@@ -310,6 +311,7 @@
                         <h4>Tailor your Services and Products to Your Liking, with the option to customize or expand your package. Reaady to begin? Click below to get Started with LemmaIoT</h4>
                         <a href="hire_service_embed.html" class="btn_3 genric-btn primary radius"><strong>Get Started With Our Service!</strong></a>
                         <a href="hire_support_embed.html" class="btn_3 genric-btn info radius"><strong>Get Started for Our Support!</strong></a>
+                        <a href="https://paystack.com/pay/lemmaiot" class="btn_3 genric-btn success radius"><strong>Make a Commitment Payment!</strong></a>
                     </div>
                 </div>
             </div>
