--- a/tools.html
+++ b/tools.html
@@ -145,7 +145,7 @@
                                 <div class="serial"></div> 
                                 <div class="country"> <img src="img/brands/brand5.png" alt="flag"></div>
                                 <div class="visit">Microsoft Office Suite's comprehensive tools aid in data analysis, documentation, and presentation, enhancing our solutions.</div>
-                                <div class="percentage"><a href="https://microsoft.com" style="color: #f50c6a">microsoft.coom</a></div>
+                                <div class="percentage"><a href="https://microsoft.com" style="color: #f50c6a">microsoft.com</a></div>
                             </div>
                             <div class="table-row">
                                 <div class="serial"></div> 
@@ -253,6 +253,7 @@
                         <h4>Empower Your Business with Our Expertise. Whether you need us to develop, manage or provide support with these tools, or if you're looking for tailored training sessions, we've got you covered.</h4>
                         <a href="hire_support_embed.html" class="btn_3 genric-btn primary radius"><strong>Hire Us for Assistance</strong></a>
                         <a href="https://calendly.com/lemmaiot/consultants" class="btn_3 genric-btn info radius"><strong>Book a Time for Consultation</strong></a>
+                        <a href="https://paystack.com/pay/lemmaiot" class="btn_3 genric-btn success radius"><strong>Make a Payment!</strong></a>
                     </div>
                 </div>
             </div>
