--- a/automation.html
+++ b/automation.html
@@ -152,7 +152,7 @@
                     </div>
                 </div>
                 <div class="row align-items-center col-lg-4 align-items-center">
-                    <a href="https://airtable.com/shrxQ0dlmzLgDBBW2" class="genric-btn default circle"><b>LET'S GET STARTED</b></a>
+                    <a href="automation_embed.html" class="genric-btn default circle"><b>LET'S GET STARTED</b></a>
                 </div>
             </div>
         </div>
@@ -263,6 +263,7 @@
                             <h4>There are lot more you can do with/through us, you can get started by yourself by using our recommended tools or get engage with us as our client and explore a lot of opportunity to ease your business operations.</h4>
                             <a href="tools.html" class="btn_3 genric-btn primary radius"><strong>Do It Yourself</strong></a>
                             <a href="https://lemmaiot.glide.page" class="btn_3 genric-btn info radius"><strong>Our Client Portal</strong></a>
+                            <a href="https://paystack.com/pay/lemmaiot" class="btn_3 genric-btn success radius"><strong>Make a Payment</strong></a>
                         </div>
                     </div>
                 </div>
