--- a/index.html
+++ b/index.html
@@ -46,20 +46,11 @@
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+<script type="text/javascript" async src="https://platform.foremedia.net/code/50462/analytics"></script>
+
 	
-<!-- chatbot link -->
-<script>
-	window.embeddedChatbotConfig = {
-	chatbotId: "DBOQ7GxNlNaKjL75_X-l9",
-	domain: "www.chatbase.co"
-	}
-	</script>
-	<script
-	src="https://www.chatbase.co/embed.min.js"
-	chatbotId="DBOQ7GxNlNaKjL75_X-l9"
-	domain="www.chatbase.co"
-	defer>
-</script>
+<iframe src="https://formless.ai/c/EZQ2TvZl0JTE" class="formless-embed" width="100%" height="600px" loading="lazy" allow="microphone" style="border: 0; display: block"></iframe>
+<script src="https://embed.formless.ai/embed.js" async></script>
 
 </head>
 
