--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
 
 <script type="text/javascript" async src="https://platform.foremedia.net/code/50462/analytics"></script>
 
-	
-<iframe src="https://formless.ai/c/EZQ2TvZl0JTE" class="formless-embed" width="100%" height="600px" loading="lazy" allow="microphone" style="border: 0; display: block"></iframe>
-<script src="https://embed.formless.ai/embed.js" async></script>
-
 </head>
 
 <body>
@@ -242,6 +238,12 @@
 	</div>
 	<!-- End Align Area -->
 
+		<!-- Start Formless Website Quotation Tag -->
+<iframe src="https://formless.ai/c/EZQ2TvZl0JTE" class="formless-embed" width="100%" height="600px" loading="lazy" allow="microphone" style="border: 0; display: block"></iframe>
+<script src="https://embed.formless.ai/embed.js" async></script>
+		<!-- End Formless Website Quotation Tag -->
+
+	
          <!--::about_us part start::-->
     <section class="review_part padding_bottom">  
             <img src="img/animate_icon/Ellipse_2.png" alt="" class="feature_icon_5 custom-animation5">
