--- a/offer.html
+++ b/offer.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Website Offer</title>
+    <title>Website Design Offer</title>
     <link rel="icon" href="img/fav.png">
 
     <!-- SEO Description Tag-->
@@ -92,7 +92,7 @@
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
-                            <h2>Website 60% Discount</h2>
+                            <h2>Website 20% Discount</h2>
                             <h5><a href="index.html" style="color: currentColor">home</a> <span></span> 
                                 <a href="website.html" style="color: currentColor">Website</a> <span></span> 
                                 <a href="offer.html" style="color: currentColor">Discount Offer</a></h5>
@@ -111,7 +111,7 @@
                 <div class="col-lg-6">
                     <div class="section_tittle text-center">
                         <h3><b>Unleash Your Online Potential with LemmaIoT's Exclusive Packages!</b></h3>
-                        <p>Are you ready to take your online presence to the next level? Look no further than LemmaIoT's unbeatable offer: <b><span>60% OFF</span></b> on any website design package!</p>
+                        <p>Are you ready to take your online presence to the next level? Look no further than LemmaIoT's unbeatable offer: <b><span>20% OFF</span></b> on any website design package!</p>
                         <p>Transform your digital presence with LemmaIoT – where innovation meets excellence. Let's create something extraordinary together. 🚀💻</p>
 
                         <br><hr><br>
